--- a/package.json
+++ b/package.json
@@ -9,15 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.3",
-    "expo-status-bar": "~1.11.1",
+    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@tensorflow/tfjs": "^4.13.0",
+    "@tensorflow/tfjs-react-native": "1.0.0",
+    "@types/react": "~18.2.14",
+    "expo": "^49.0.5",
+    "expo-barcode-scanner": "~12.5.3",
+    "expo-camera": "~13.4.4",
+    "expo-file-system": "~15.4.4",
+    "expo-gl": "~13.0.1",
+    "expo-gl-cpp": "^11.4.0",
+    "expo-status-bar": "^1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "0.72.4",
+    "react-native-fs": "^2.20.0",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "metro": "0.76.6"
   },
   "private": true
 }
