--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@tensorflow/tfjs": "^4.13.0",
     "@tensorflow/tfjs-react-native": "1.0.0",
     "@types/react": "~18.2.14",
@@ -19,9 +19,9 @@
     "expo-file-system": "~15.4.4",
     "expo-gl": "~13.0.1",
     "expo-gl-cpp": "^11.4.0",
-    "expo-status-bar": "^1.11.1",
+    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.72.10",
     "react-native-fs": "^2.20.0",
     "typescript": "^5.1.3"
   },
