--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-native": "0.72.10",
     "react-native-fs": "^2.20.0",
+    "react-native-svg": "^15.0.0",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
